--- a/abc_enhancer_gene_prediction/activity_by_contact.ipynb
+++ b/abc_enhancer_gene_prediction/activity_by_contact.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7112838c-3352-4741-a828-bcba8a6cb663",
+   "metadata": {},
+   "source": [
+    "# Macs2 Call Peaks and Make Candidate Regions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54c44157-57c0-4dd4-9150-7c2445c67948",
+   "metadata": {},
+   "source": [
+    "![](abc_step01_workflow_graph.svg)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "00bfacfa-b8a5-4b6f-b174-2fd602640ae7",
    "metadata": {},
    "source": [
@@ -10,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "026c37c5-3fc4-4eeb-8a1e-9a7bcf6f089f",
    "metadata": {},
    "outputs": [
@@ -30,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d8977af3-2a91-408d-8fe3-0d843438b7cb",
    "metadata": {},
    "outputs": [],
@@ -41,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "6bbc27b5-d93d-4c2f-a4ea-1ec848b38464",
    "metadata": {},
    "outputs": [
@@ -49,29 +66,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Saving dave/abc-development-scratch-project/abc_step01 to /sbgenomics/workspace/abc_step01_wf.cwl\n"
+      "1: abc_step01_wf.cwl\n",
+      "2: abc_step01_wf.cwl.steps/macs2_call_peaks.cwl\n",
+      "3: abc_step01_wf.cwl.steps/makecandidateregions.cwl\n"
      ]
     }
    ],
    "source": [
     "%%sh\n",
-    "sbpull nhlbi dave/abc-development-scratch-project/abc_step01 abc_step01_wf.cwl"
+    "sbpull nhlbi --unpack dave/abc-development-scratch-project/abc_step01 abc_step01_wf.cwl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e3996f18-46f3-451e-91e5-52be89d95395",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting run_step01_wf.sh\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile run_step01_wf.sh\n",
     "cwltool --udocker --verbose abc_step01_wf.cwl \\\n",
@@ -88,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sh\n",
+    "%%sh --out temp \n",
     "bash run_step01_wf.sh > standard.out"
    ]
   },
@@ -96,7 +107,44 @@
    "cell_type": "markdown",
    "id": "fdcf312f-1bdc-4b4a-99bb-3b0cd4e455ad",
    "metadata": {},
-   "source": []
+   "source": [
+    "print(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db81eaf2-696b-4cf0-b3fc-56cba52199bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "grep -v 'sbg:' abc_step01_wf.cwl\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bdb0a60-a0aa-4992-8ea1-3d270e64a68c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudo apt-get update\n",
+    "sudo apt-get install graphviz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cb39df41-2c56-4566-b357-b65fcfd2208d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh --out temp_out --no-raise-error --err ERR\n",
+    "cwltool --print-dot abc_step01_wf.cwl | dot -Tsvg > abc_step01_workflow_graph.svg\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
