--- a/abc_enhancer_gene_prediction/activity_by_contact.ipynb
+++ b/abc_enhancer_gene_prediction/activity_by_contact.ipynb
@@ -10,6 +10,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6f80455e-8370-47a3-b028-3666ac8ba0b0",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Describing the Activity by Contact Model of Enhancer-Gene Specificity in Common Workflow Language\n",
+    "  \n",
+    "[broadinstitute/ABC-Enhancer-Gene-Prediction: Cell type specific enhancer-gene predictions using ABC model (Fulco, Nasser et al, Nature Genetics 2019)](https://github.com/broadinstitute/ABC-Enhancer-Gene-Prediction) \n",
+    "\n",
+    "\n",
+    "[Private development project located on BioData Catalyst Powered by Seven Bridges](https://platform.sb.biodatacatalyst.nhlbi.nih.gov/u/dave/abc-development-scratch-project) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "54c44157-57c0-4dd4-9150-7c2445c67948",
    "metadata": {},
    "source": [
